# seedkit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PYPI_README.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/seedkit-cli/: Cargo.toml
crates/seedkit-cli/src/: args.rs  main.rs
crates/seedkit-cli/src/commands/: check.rs  generate.rs  graph.rs  introspect.rs  mod.rs  preview.rs  sample.rs
crates/seedkit-core/: Cargo.toml
crates/seedkit-core/benches/: classify.rs  engine.rs  output.rs
crates/seedkit-core/src/: config.rs  error.rs  lib.rs
crates/seedkit-core/src/check/: mod.rs
crates/seedkit-core/src/classify/: correlations.rs  mod.rs  rules.rs  semantic.rs
crates/seedkit-core/src/generate/: correlated.rs  custom.rs  engine.rs  foreign_key.rs  mod.rs  plan.rs  providers.rs  unique.rs  value.rs
crates/seedkit-core/src/graph/: cycle.rs  dag.rs  mod.rs  topo.rs  visualize.rs
crates/seedkit-core/src/llm/: client.rs  mod.rs  parse.rs  prompt.rs
crates/seedkit-core/src/lock/: mod.rs  types.rs
crates/seedkit-core/src/output/: csv.rs  direct.rs  json.rs  mod.rs  sql.rs
crates/seedkit-core/src/sample/: mask.rs  mod.rs  stats.rs
crates/seedkit-core/src/schema/: introspect.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs  types.rs
crates/seedkit-core/tests/: integration_mysql.rs  integration_postgres.rs
crates/seedkit-testutil/: Cargo.toml
crates/seedkit-testutil/src/: lib.rs
docker/: docker-compose.test.yml
npm/seed-kit/: README.md  package.json
npm/seed-kit-darwin-arm64/: package.json
npm/seed-kit-darwin-x64/: package.json
npm/seed-kit-linux-arm64/: package.json
npm/seed-kit-linux-x64/: package.json
npm/seed-kit-win32-x64/: package.json
tests/fixtures/schemas/: circular.sql  circular_mysql.sql  ecommerce.sql  ecommerce_mysql.sql  edge_cases.sql
