[workspace]
members = ["crates/seedkit-core", "crates/seedkit-cli", "crates/seedkit-testutil"]
resolver = "2"

[workspace.package]
version = "1.5.1"
edition = "2021"
authors = ["Kenny Igbechi"]
license = "MIT"
description = "Generate realistic, constraint-safe seed data for any database"
repository = "https://github.com/kclaka/seedkit"

[workspace.dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "mysql", "sqlite", "chrono", "uuid"] }

# Graph
petgraph = "0.7"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Fake data
fake = { version = "4", features = ["chrono", "uuid"] }
rand = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Regex
regex = "1"

# Ordered maps
indexmap = { version = "2", features = ["serde"] }

# Progress
indicatif = "0.17"

# Terminal tables
comfy-table = "7"

# Base64 encoding
base64 = "0.22"

# Hashing
sha2 = "0.10"

# URL parsing
url = "2"

# Dotenv
dotenvy = "0.15"

# Testing
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
