[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "seedkit"
version = "1.5.0"
description = "Generate realistic, constraint-safe seed data for any database"
readme = "PYPI_README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["database", "seed", "testing", "fake-data", "sql"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/kclaka/seedkit"
Repository = "https://github.com/kclaka/seedkit"
Issues = "https://github.com/kclaka/seedkit/issues"

[tool.maturin]
bindings = "bin"
manifest-path = "crates/seedkit-cli/Cargo.toml"
strip = true
