[package]
name = "seedkit-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for SeedKit — generate realistic database seed data"

[[bin]]
name = "seedkit"
path = "src/main.rs"

[dependencies]
seedkit-core = { path = "../seedkit-core" }
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
indicatif.workspace = true
comfy-table.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
