[package]
name = "seedkit-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for SeedKit — realistic database seed data generation"

[dependencies]
sqlx.workspace = true
petgraph.workspace = true
fake.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
indexmap.workspace = true
indicatif.workspace = true
comfy-table.workspace = true
sha2.workspace = true
base64.workspace = true
dotenvy.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "classify"
harness = false

[[bench]]
name = "output"
harness = false
