[package]
name = "seedkit-testutil"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Test utilities for SeedKit"

[dependencies]
seedkit-core = { path = "../seedkit-core" }
sqlx.workspace = true
tokio.workspace = true
indexmap.workspace = true
